`Updated CSS and HTML files to correct alignment and image usage`

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -280,7 +280,7 @@ header{
 }
 
 .btn {
-    align-items:center;
+    align-items:baseline;
     padding-left: 800px;
     margin-top: 20px;
     background: #f7cf66;
@@ -291,6 +291,7 @@ header{
     cursor: pointer;
     font-size: 1.2em;
 }
+
 
 /*FOOTER*/
 footer {
